[Feature #161219311] failed to fetch bug

--- a/UI/menu.html
+++ b/UI/menu.html
@@ -12,7 +12,7 @@
 	<body >
             <h1 id="logo">Fast-Food Fast</h1>
                 <div class="tabs">
-                    <input id="orderFoodBtn" onclick="window.location.href='orderFood.html'" type="button" value="Order Food" />
+                    <input id="orderFoodBtn" onclick="window.location.href='orderFood.html';availableFood()" type="button" value="Order Food" />
                     <input id="userHistoryBtn"  onclick="window.location.href='user_history.html'" type="button" value="User History" />
                     <input id="menuBtn"  onclick="fetchMenu();return false;" type="button" value="Menu" />
                     <input id="logOutBtn"  onclick="window.location.href='log_out.html';logout()" type="button" value="Log Out" />
