--- a/UI/user_history.html
+++ b/UI/user_history.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-		<meta name="viewport" content="widtd=device-widtd, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Fast-Food-Fast</title>
         
         <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
