--- a/UI/admin.html
+++ b/UI/admin.html
@@ -19,7 +19,7 @@
                     <input id="userHistoryBtn"  onclick="window.location.href='user_history.html'" type="button" value="User History" />
                     
                 </div>
-                <div id="sign_in" class="tabcontents">
+                <div id="admin_sign_in" class="tabcontents">
                         <form id="signIn_form" onsubmit= "fetchAdminToken();return false"  method="post" novalidate>
                 
                             <h2>Sign In</h2>
