--- a/UI/menu.html
+++ b/UI/menu.html
@@ -11,12 +11,19 @@
 	</head>
 	<body >
             <h1 id="logo">Fast-Food Fast</h1>
+                <div class="admin_tabs">
+                    <input id="adminSignupOthers"  onclick="window.location.href='admin_sign_up_others.html'" type="button" value="Signup Others" />
+                    <input id="updateMenu"  onclick="window.location.href='menu.html'" type="button" value="Update Menu" />
+                    <input id="allOrders"  onclick="window.location.href='orderFood.html'" type="button" value="All Orders" />
+                    <input id="specificOrder"  onclick="window.location.href='orderFood.html'" type="button" value="Specific Order" />
+                </div>
                 <div class="tabs">
                     <input id="orderFoodBtn" onclick="window.location.href='orderFood.html';availableFood()" type="button" value="Order Food" />
                     <input id="userHistoryBtn"  onclick="window.location.href='user_history.html'" type="button" value="User History" />
                     <input id="menuBtn"  onclick="fetchMenu();return false;" type="button" value="Menu" />
                     <input id="logOutBtn"  onclick="window.location.href='log_out.html';logout()" type="button" value="Log Out" />
                 </div>
+                
                 <div id = "menu">
                    
                 </div>
