--- a/UI/admin_sign_up_others.html
+++ b/UI/admin_sign_up_others.html
@@ -13,14 +13,11 @@
                 <h1 id="logo">Fast-Food Fast</h1>
                 <div class="tabs">
                     <!--<input id="signUpBtn" onClick="signUpFunction()" type="button" value="Sign Up" />-->
-                    <input id="signUpBtn" onClick="fetchSignUpToken()" type="button" value="Sign Up" />
-                    <input id="signInBtn" onClick="window.location.href='sign_in.html';signInFunction()" type="button" value="Sign In" />
                     <input id="orderFoodBtn" onclick="window.location.href='orderFood.html'" type="button" value="Order Food" />
-                    <input id="adminBtn"  onclick="window.location.href='admin.html'" type="button" value="Admin" />
                     <input id="userHistoryBtn"  onclick="window.location.href='user_history.html'" type="button" value="User History" />
-                    <input id="signupOthersBtn" class="admin" onclick="window.location.href='admin_sign_up_others.html'" type="button" value="Admin Signup Others" />
-                    <input id="updateMenuBtn" class="admin" onclick="window.location.href='menu.html'" type="button" value="Admin Signup Others" />
-                   
+                    <input id="menuBtn"  onclick="window.location.href='menu.html';fetchMenu();return false;" type="button" value="Menu" />
+                    <input id="logOutBtn"  onclick="window.location.href='log_out.html';logout()" type="button" value="Log Out" />
+                
                 </div>
                 <div class="admin_tabs">
                     <input id="adminSignupOthers"  onclick="window.location.href='admin_sign_up_others.html'" type="button" value="Admin Signup Others" />
