--- a/UI/orderFood.html
+++ b/UI/orderFood.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="tabs">
                     <input id="orderFoodBtn" onclick="availableFood()" type="button" value="Order Food" />
-                    <input id="menuBtn"  onclick="window.location.href='menu.html'" type="button" value="Menu" />
+                    <input id="menuBtn"  onclick="window.location.href='menu.html';fetchMenu();return false;" type="button" value="Menu" />
                     <input id="userHistoryBtn"  onclick="window.location.href='user_history.html'" type="button" value="User History" />
                     <input id="logOutBtn"  onclick="logout()" type="button" value="Log Out" />
                 </div>
